<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBack"
    tools:context="com.engineeringforyou.basesite.MainActivity">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="20dp"
        android:text="@string/title"
        android:textSize="18sp"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.032" />

    <TextView
        android:id="@+id/siteNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"

        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/powered_by"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <EditText
        android:id="@+id/siteText"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="120dp"
        android:background="@android:color/holo_blue_bright"
        android:ems="10"
        android:hint="@string/site"
        android:inputType="number"
        android:textSize="24sp"
        android:maxLength="8"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_alignTop="@+id/button"
        tools:ignore="RtlHardcoded" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_marginRight="8dp"
        android:onClick="onClick"
        android:text="@string/search"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_editor_absoluteY="0dp"
        android:layout_marginTop="43dp"
        android:layout_below="@+id/button2"
        android:layout_alignParentEnd="true" />

    <EditText
        android:id="@+id/siteAddress"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="120dp"
        android:background="@android:color/holo_blue_bright"
        android:ems="10"
        android:hint="@string/address"
        android:textSize="24sp"
        android:maxLength="40"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_alignTop="@+id/button2"/>

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_marginRight="8dp"
        android:onClick="onClick"
        android:text="@string/search"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_editor_absoluteY="0dp"
        android:layout_marginTop="38dp"
        android:layout_below="@+id/textView2"
        android:layout_alignStart="@+id/button" />

    <Button
        android:id="@+id/searchHere"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/siteText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:onClick="onClick"
        android:text="@string/searchHere" />

</RelativeLayout>
